fixed spacing

--- a/css/general.css
+++ b/css/general.css
@@ -34,34 +34,28 @@ html {
 img {
     width: 100%;
 }
-
 header {
     background-color: #39607A;
 }
-
 .logo {
     height: 4rem;
     width: auto;
     margin: 1.5rem 5%
 }
-
 .nav-top {
     clear: both;
 }
-
 .nav-top ul {
     margin: 0;
     padding: 0;
     background-color: #BAD8E1;
     text-align: center;
 }
-
 .nav-top li {
     margin: 0;
     padding: 0;
     display: inline;
 }
-
 .nav-top a,
 .nav-top a:link,
 .nav-top a:visited {
@@ -71,38 +65,34 @@ header {
     color: #ECE6EF;
     font-size: 1.25rem;
     text-decoration: none;
-    
 }
-
 body {
     margin: 0;
     padding: 0;
 }
-
 .billboard {
     overflow: hidden;
     background-image: url(../images/Sheabutterloccitane.jpg);
     background-color: white;
     background-repeat: no-repeat;
     background-position: center center;
-    background-size: 40rem;
+    background-size: 100%;
 }
-
-.billboard p{
-    background-color: rgba( 248, 108, 82, .85);
-     margin:  0 0 10% 8rem;
+.billboard p {
+    background-color: rgba(248, 108, 82, .85);
+    margin: 0 0 10% 8rem;
     padding: .25rem 5%;
 }
-
 h1 {
-    font-family: Helvetica; "san-serif; 
-    font-weight: normal;
+    font-family: Helvetica;
+    "san-serif; 
+ font-weight: normal;
     font-size: 2rem;
     opacity: 75%;
-  line-height: 1.75rem;
+    line-height: 1.75rem;
     margin: 6rem 0 0 8rem;
     padding: .25rem 5%;
-    background-color: rgba( 248, 108, 82, .85);
+    background-color: rgba(248, 108, 82, .85);
     color: #ECE6EF;
 }
 .bucket1 {
@@ -111,81 +101,72 @@ h1 {
     padding: 0;
     background-color: #BAD8E1;
 }
-
 .bucket1 img {
     float: left;
     width: 45%;
     margin: 0 5% 0 0;
     padding: 0;
 }
-
 .bucket1 p {
     float: right;
     width: 50%;
     margin: 0 0 2%;
     padding: 0;
-     font-family: Gilda Display; "Times New Roman", "serif; 
-    font-size: 1rem; 
-    font-weight:normal;
-    line-height: 1.3rem; 
-   
+    font-family: Gilda Display;
+    "Times New Roman", "serif; 
+ font-size: 1rem;
+    font-weight: normal;
+    line-height: 1.3rem;
 }
-
 .product {
     clear: both;
 }
-
 .product ul {
     margin: 0;
     padding: 0;
     text-align: center;
 }
-
 .product p {
-    font-family: Gilda Display; "Times New Roman", "serif; 
-    font-size: .75rem; 
-    font-weight:normal;
-    line-height: 1.5rem; 
-    margin:0;
-}
-
-
-
-h2 {
-    font-family: Helvetica; "san-serif; 
+    font-family: Gilda Display;
+    "Times New Roman", "serif; 
+ font-size: .75rem;
     font-weight: normal;
+    line-height: 1.5rem;
+    margin: 0;
+}
+.product li {
+    margin: 0;
+    padding: 0;
+    display: inline;
+}
+h2 {
+    font-family: Helvetica;
+    "san-serif; 
+ font-weight: normal;
     font-size: 1.5rem;
     margin: 2%;
     line-height: 1.7rem;
     text-decoration: none;
     color: #39607A;
 }
-
-
-h3{
-    font-family: Helvetica; "san-serif; 
-    text-align: center;
+h3 {
+    font-family: Helvetica;
+    "san-serif; 
+ text-align: center;
     font-weight: normal;
-    font-size: 2.5rem;   
-    margin: 2rem 0 1.5rem 0;
+    font-size: 2.5rem;
+    margin: 2rem 0 1rem 0;
     color: #F26C52;
     line-height: 2.5rem
 }
-
 p {
-  font-family: Gilda Display; "Times New Roman", "serif; 
-    font-size: 1.5rem; 
-    font-weight:normal;
-    line-height: 1.7rem; 
-    margin: -1rem 5% 1rem 5%; 
+    font-family: Gilda Display;
+    "Times New Roman", "serif; 
+ font-size: 1.5rem;
+    font-weight: normal;
+    line-height: 1.7rem;
+    margin: 0 5% 1rem 5%;
 }
-
-.product li {
-    margin: 0;
-    padding: 0;
-    display: inline;
-}
-
 .bucket2 {
     overflow: hidden;
     margin: 0;
@@ -194,35 +175,81 @@ p {
     border-bottom: solid;
     border-bottom-color: #ECE6EF;
     border-width: .15rem
-    
 }
-
 .bucket2 img {
     float: left;
     width: 45%;
     margin: 0 5% 0 0;
     padding: 0;
 }
-
 .bucket2 p {
     float: right;
     width: 50%;
     margin: 0 0 2%;
     padding: 0;
-     font-family: Gilda Display; "Times New Roman", "serif; 
-    font-size: 1rem; 
-    font-weight:normal;
-    line-height: 1.3rem; 
-   
+    font-family: Gilda Display;
+    "Times New Roman", "serif; 
+ font-size: 1rem;
+    font-weight: normal;
+    line-height: 1.3rem;
 }
 
+blockquote p {
+    font-size: 1rem;
+    font-family: Gilda Display;
+    "Times New Roman", "serif; 
+    font-weight: normal;
+    line-height: 1.6rem;
+    margin: 2rem 10% 4rem 10%;
+    font-weight: bold;
+}
+blockquote span {
+    font-weight: bold;
+    float: right;
+    margin: 1.5rem 0  ;
+    color: #F26C52;
+}
+blockquote p:before {
+    content: "“";
+    font-size: 5rem;
+    color: #F26C52;
+    float: left;
+    margin: 1rem 0 0 -2rem;
+    font-weight: normal;
+}
+blockquote p:after {
+    content: "”";
+    font-size: 5rem;
+    position: absolute;
+    color: #F26C52;
+    margin: 1.3rem 0 0 .6rem;
+    font-weight: normal;
+}
 
+.foot {
+    overflow: hidden;
+}
+.foot figure {
+    margin: 1rem 5% 0 0;
+    padding: 0;
+}
+.foot a,
+.foot a:link,
+.foot a:visited {
+    float: left;
+    width: 30%;
+    margin: 1rem 5% 1.5rem 0;
+    padding: 0;
+}
 
+.foot a:nth-child(3) {
+    margin: 1rem 0;
+}
 
-
-
-
-
+footer {
+    margin: 0;
+    padding: 0 10%;
+}
 
 
 footer p {
@@ -231,11 +258,10 @@ footer p {
     font-size: .75rem;
     text-align: center;
     padding: 1.5rem;
-    font-family: Gilda Display; "Times New Roman", "serif;
-    
-   
-}
+    font-family: Gilda Display;
+    "Times New Roman", "serif;
 
+}
 footer {
-    background-color: #39607A
+    background-color: #39607A;
 }
